# grabbit

./: .gitignore  .pylintrc  Dockerfile  README.md  cli.py  pyproject.toml
.github/actions/setup-python-and-poetry/: action.yaml
.github/workflows/: docker.yaml  pylint.yaml  pytest.yaml
app/: downloader.py  grabbit.py  httpclient.py  logger.py  typing_custom.py  utils.py  wayback.py
grabbit/: __main__.py  cli.py  downloader.py  grabbit.py  httpclient.py  logger.py  typing_custom.py  utils.py  wayback.py
tests/: test_cli.py  test_httpclient.py  test_typing_custom.py  test_utils.py  test_wayback.py
