[project]
name = "grabbit"
version = "1.0.2"
description = "Reddit Saved Posts Downloader"
authors = [
    {name = "devicarus",email = "devicarus@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "yt-dlp (>=2025.2.19)",
    "requests (>=2.32.4,<3.0.0)",
    "praw (>=7.8.1,<8.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry.scripts]
grabbit = 'grabbit.cli:cli'

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
flexmock = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
